# advent-2020

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  main.cpp
src/solutions/: CMakeLists.txt  day_1.cpp  day_1.hpp  day_10.hpp  day_11.hpp  day_12.hpp  day_13.hpp  day_14.hpp  day_15.hpp  day_16.hpp  day_17.hpp  day_18.hpp  day_2.hpp  day_3.hpp  day_4.hpp  day_5.hpp  day_6.hpp  day_7.hpp  day_8.hpp  day_9.hpp  register.cpp  register.hpp  solutions.cpp  solutions.hpp
src/utils/: CMakeLists.txt  read_file.cpp  read_file.hpp  utils.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  day10_test.cpp  day11_test.cpp  day12_test.cpp  day13_test.cpp  day14_test.cpp  day15_test.cpp  day16_test.cpp  day17_test.cpp  day18_test.cpp  day1_test.cpp  day2_test.cpp  day3_test.cpp  day4_test.cpp  day5_test.cpp  day6_test.cpp  day7_test.cpp  day8_test.cpp  day9_test.cpp
